--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,31 @@
   <display-name>WeChat Application</display-name>
 
   <servlet>
+    <servlet-name>spring</servlet-name>
+    <servlet-class>
+      org.springframework.web.servlet.DispatcherServlet
+    </servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:springmvc-servlet.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
+
+  <servlet-mapping>
+    <servlet-name>spring</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+
+  <!-- jianting -->
+  <listener><listener-class>org.springframework.web.context.ContextLoaderListener</listener-class></listener>
+
+  <servlet>
     <servlet-name>aaa</servlet-name>
     <servlet-class>cn.milo.wechat.AccessToken.AccessToken</servlet-class>
     <load-on-startup>1</load-on-startup>
