--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -1,3 +1,3 @@
-WECHAT.APPID = wx5a0ee712e5bc6d1f
-WECHAT.SECRET = d10663ea3a226d4825f9c6994337ff20
+WECHAT.APPID = wxf83e7c0318cb4eec
+WECHAT.SECRET = 74b1977d4583fecaa1f880ffddc608db
 WECHAT.TOKEN = shangmingtao
